@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Aug 2009; Markos Chandras <hwoarang@gentoo.org>
+  xvideoservicethief-9999.ebuild:
+  Sync with portage ebuild
+
   06 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
   -xvideoservicethief-2.1.ebuild:
   On tree
